--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,144 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+body {
+  background-image: radial-gradient(#f3f3f37a, #0f0f0f);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+  width: 100%;
+}
+h1 {
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 2.5rem;
+  background-image:linear-gradient(#7e85977a, #849197);  
+  background-size: cover;
+}
+.container {
+  overflow: hidden;
+  margin: 10rem auto;
+  max-width: 30rem;
+  display: flex;
+  flex-direction: column;
+  border: 0.1rem;
+
+  align-items: center;
+
+  border-radius: 6px;
+  background: rgb(236, 236, 236);
+  box-shadow: 0 0 8px  #f0a940; 
+}
+
+.flex-box {
+  display: flex;
+}
+
+.user-list {
+  justify-content: space-between;
+  border-bottom: 0.1rem solid gray;
+  padding: 2rem;
+}
+
+ul {
+  flex-direction: column;
+  list-style: none;
+}
+.last-li a {
+  color: red;
+}
+
+ul li {
+  padding: 0.2rem;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.actions {
+  margin-left: 1.5rem;
+}
+
+tbody * + * {
+  margin:1rem;
+} 
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  margin: auto;
+  display: inline-block;
+}
+.field {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.field input {
+  margin-left: 2rem;
+  padding: 0.5rem;
+}
+
+input[type=submit] {
+  margin-top: 1rem;
+  padding: 0.5rem;
+  background-color: rgb(99, 171, 213);
+  border-radius: 0.2rem;
+  font-weight: bolder;
+}
+footer {
+  margin: auto;
+  padding: 1rem;
+}
+
+.new-user {
+  margin: auto;
+  display: inline-block;
+  background: rgb(9, 163, 184);
+  padding: 0.5rem;
+  color: white;
+  border: 0.2rem solid gray;
+}
+
+.new-user a {
+  color: white;
+}
+
+#notice {
+  padding: 1rem;
+  width: 100%;
+  color: white;
+  background: rgba(141, 233, 154, 0.726);
+  font-weight: bold;
+}
+
+nav {
+  padding: 1rem;
+}
