--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,8 @@
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
-
+<nav>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
+</nav>
+
