--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -51,6 +51,16 @@ h1 {
   display: flex;
 }
 
+.error-list {
+  margin-bottom: 1rem;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 217, 111, 0.281);
+  list-style: square;
+  font-weight: bold;
+  color: red;
+}
+
 .user-list {
   justify-content: space-between;
   border-bottom: 0.1rem solid gray;
