--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,63 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-        <% user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<%
+=begin%>
+ 
+  <form action="users" method="POST" accept-charset="UTF-8">
+    <div class="field">
+      <label for="username">Username</label>
+      <input type="text" id="username">
     </div>
-  <% end %>
+
+    <div class="field">
+      <label for="email">Email</label>
+      <input type="text" id="email">
+    </div>
+
+    <div class="field">
+      <label for="password">Password</label>
+      <input type="password" id="password">
+    </div>
+
+    <button class="actions" type="submit">
+      sutmit
+    </button>
+  <form> 
+<%
+=end%>
+
+
+<%
+=begin%>
+  <%= form_tag url_for(action: ‘create’), method: “post” do %>
+
+    <div class="field">
+      <%= label_tag (:username, "User name:")%>
+      <%= text_field_tag (:username) %>
+    </div>
+
+    <div class="field">
+      <%= label_tag (:email, "Email") %>
+      <%= text_field_tag (:email) %>
+    </div>
+
+    <div class="field">
+      <%= form.label (:password, "Password") %>
+      <%= password_field_tag (:password) %>
+    </div>
+
+    <div class="actions">
+      <%= submit_tag ("Submit") %>
+    </div>
+  <% end %> 
+<%
+=end%>
+
+
+
+<%= form_for @user do |form| %>
+
+
+  <%= error_validator(user)%>
+
 
   <div class="field">
     <%= form.label :username %>
