--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @user.username %>
+  <%= :username %>
 </p>
 
 <p>
   <strong>Email:</strong>
-  <%= @user.email %>
+  <%= :email %>
 </p>
 <nav>
 <%= link_to 'Edit', edit_user_path(@user) %> |
